err/pushy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pushy'...
Compiling './lib/python3.5/site-packages/pushy/client.py'...
***   File "./lib/python3.5/site-packages/pushy/client.py", line 189
    exec self.__code in module.__dict__
            ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/pushy/protocol'...
Compiling './lib/python3.5/site-packages/pushy/protocol/baseconnection.py'...
***   File "./lib/python3.5/site-packages/pushy/protocol/baseconnection.py", line 271
    except ValueError, err:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pushy/protocol/message.py'...
***   File "./lib/python3.5/site-packages/pushy/protocol/message.py", line 57
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pushy/protocol/proxy.py'...
***   File "./lib/python3.5/site-packages/pushy/protocol/proxy.py", line 119
    raise AttributeError, "__call__"
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pushy/transport'...
Listing './lib/python3.5/site-packages/pushy/transport/smb'...
Compiling './lib/python3.5/site-packages/pushy/transport/smb/native.py'...
***   File "./lib/python3.5/site-packages/pushy/transport/smb/native.py", line 141
    raise Exception, "Failed to close handle"
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pushy/util'...
Compiling './lib/python3.5/site-packages/pushy/util/askpass.py'...
***   File "./lib/python3.5/site-packages/pushy/util/askpass.py", line 105
    os.chmod(path, 0700)
                      ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/pushy-0.5.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
